@startuml
interface ObjectCreator {
    + {abstract} createNewMachine(machineIndex:int) : void
    + {abstract} createNewMachineWithGO(machineIndex:int) : GameObject
}
class ObjectsCreatorImpl {
    + Construct(machineViewFactory:MachineView.Factory, anchorPresenterFactory:AnchorPresenter.Factory) : void
    + createNewMachine(machineIndex:int) : void
    + createNewMachineWithGO(machineIndex:int) : GameObject
}
MonoBehaviour <|-- ObjectsCreatorImpl
ObjectCreator <|-- ObjectsCreatorImpl
@enduml
